--- a/pom.xml
+++ b/pom.xml
@@ -51,24 +51,24 @@
         </configuration>
       </plugin>
  <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
+        //upId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.3.0</version>
-        <executions>
-          <execution>
-            <id>enforce-maven</id>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <requireMavenVersion>
-                  <version>3.0</version>
-                </requireMavenVersion>
-              </rules>    
-            </configuration>
-          </execution>
-        </executions>
+        //<version>3.3.0</version>
+        //<executions>
+         // <execution>
+          //  <id>enforce-maven</id>
+           // <goals>
+             // <goal>enforce</goal>
+            //</goals>
+           // <configuration>
+             // <rules>
+               // <requireMavenVersion>
+                 // <version>3.0</version>
+               // </requireMavenVersion>
+             // </rules>    
+           // </configuration>
+         // </execution>
+        //</executions>
       </plugin>
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
